--- a/Basic JavaScript Projects/Project1_expressions_alert/index.html
+++ b/Basic JavaScript Projects/Project1_expressions_alert/index.html
@@ -7,5 +7,11 @@
 <body>
     <script src="JS/main.js"></script>
 
+    <h2>The onclick Attribute</h2>
+
+        <button onclick="document.getElementById('demo').innerHTML=Date()">The time is?</button>
+
+        <p id="demo"></p>
+
 </body>
 </html>
