--- a/Basic JavaScript Projects/Calculator Challenge/calculator.html
+++ b/Basic JavaScript Projects/Calculator Challenge/calculator.html
@@ -12,6 +12,9 @@
     </head>
 
     <body>
+
+        <script> document.body.classList.add('fade-out');</script>
+        
         <!--This is the main div container that will display the calculator-->
         <div class="calculator">
             <!--This input displays the result of the calculation-->
