--- a/Basic JavaScript Projects/React_Projects/React_3.html
+++ b/Basic JavaScript Projects/React_Projects/React_3.html
@@ -9,6 +9,9 @@
             <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     </head>
     <body>
+
+        <h1 style="font-size:5vw;">Responsive Text</h1>
+        
         <div id='JSX'></div>
     <script type="text/babel">
     class Greeting extends React.Component {
