--- a/Basic JavaScript Projects/Calculator Challenge/calculator.html
+++ b/Basic JavaScript Projects/Calculator Challenge/calculator.html
@@ -8,7 +8,7 @@
         <!--Link CSS File-->
         <link rel="stylesheet" href="CSS/Calculator_CSS.css">
         <!--Link JavaScript File-->
-        <script src="Javascript/Calculator_Javascript.js" defer></script>
+        <script src="JS/Calculator_JavaScript.js" defer></script>
     </head>
 
     <body>
@@ -46,7 +46,7 @@
                 <button type="button" class="equal-sign operator" value="=">=</button>
 
             </div>
-        </div>>
+        </div>
     </body>
 
 </html>
